<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Historicar</string>

    <!-- Home Activity-->
    <string name="homeActivityTicketsTitleTab">Multas</string>
    <string name="homeActivityPointsTitleTab">Pontos</string>
    <string name="bottomValidText">Consulta válida somente para cidade do Rio de Janeiro.</string>

    <!-- About Activity-->
    <string name="aboutActivityTitle">Sobre:</string>
    <string name="aboutActivityDescription">O Historicar é um app onde você pode consultar multas de todos os veículos da Cidade do Rio de Janeiro.</string>
    <string name="aboutActivityDescriptionPS">Este app foi desenvolvido de forma independente.</string>
    <string name="aboutActivitySubtitleTitle">Legenda:</string>
    <string name="aboutActivityMultaPaga">Multa paga.</string>
    <string name="aboutActivityMultaNaoPaga">Multa não paga.</string>
    <string name="aboutActivityDevelopertitle">Desenvolvedor:</string>
    <string name="aboutActivityDeveloperValue">Rodrigo Haus Bacellar - rodrigo.haus@gmail.com</string>
    <string name="aboutActivityAppVersion">Versão 1.2.2</string>

    <!-- No Multa Activity -->
    <string name="noMultaActivityCidadeAgradece">A cidade agradece.</string>

    <!-- InsertOrEdit Activity-->
    <string name="newPlateTitleText">Nova Placa</string>
    <!-- InsertOrEdit Points Activity-->
    <string name="newDriverTitlerText">Novo Motorista</string>

    <string name="updateTitleText">Atualizar</string>

    <string name="invalid_description">Por favor, digite a descrição corretamente.</string>
    <string name="invalid_plate">Por favor, digite a placa no padrão: ABC1234</string>
    <string name="invalid_vehicle_type">Por favor, escolha o tipo de veículo.</string>
    <string name="invalid_plate_number">Por favor, digite os números corretamente.</string>
    <string name="invalid_connection">Por favor, verifique sua conexão.</string>
    <string name="are_you_sure">Tem certeza que deseja deletar a placa </string>
    <string name="carro">carro</string>

    <string name="driver">driver</string>

    <string name="hint_example">EX: AAA1234</string>
    <string name="hint_plate_name">Meu Carro</string>
    <string name="hint_plate_value">LSL - 4317</string>

    <string name="hint_points">EX: CPF</string>

    <string name="appodeal_key">956e7c37b94eca6578c05d461500d0daaeea94463c52ddbd</string>


    <string name="snackbar_singular">Foi encontrada %s multa.</string>
    <string name="snackbar_plural">Foram encontradas %s multas.</string>

</resources>
