<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/custom_shape_message_activity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="Sobre:"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <LinearLayout
                    android:id="@+id/aboutValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aboutTitle"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/aboutActivityDescription"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                    <TextView
                        android:id="@+id/descriptionPS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/aboutActivityDescriptionPS"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="italic"/>

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:text="Legenda:"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aboutValue"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_green"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutActivityMultaPaga"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/green"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_red"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutActivityMultaNaoPaga"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/red"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/aboutDeveloperTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/aboutActivityDevelopertitle"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

                    <TextView
                        android:id="@+id/aboutDeveloperValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/aboutActivityDeveloperValue"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>